--- a/vercel.json
+++ b/vercel.json
@@ -9,8 +9,11 @@
       }
     },
     {
-      "src": "statics/(.*)",
-      "use": "@vercel/static"
+      "use": "@vercel/static",
+      "src": "templates/statics/**",
+      "config": {
+        "zeroConfig": true
+      }
     }
   ],
   "routes": [
