--- a/vercel.json
+++ b/vercel.json
@@ -12,7 +12,7 @@
       "use": "@vercel/static",
       "src": "templates/statics/**",
       "config": {
-        "basePath": "/statics"
+        "basePath": "./statics"
       }
     }
   ],
