--- a/vercel.json
+++ b/vercel.json
@@ -12,7 +12,7 @@
       "use": "@vercel/static",
       "src": "templates/statics/**",
       "config": {
-        "basePath": "../../"
+        "distDir": "public"
       }
     }
   ],
@@ -20,6 +20,10 @@
     {
       "src": "/(.*)",
       "dest": "/api/client"
+    },
+    {
+      "src": "/statics/(.*)",
+      "dest": "/static/templates/statics/$1"
     }
   ]
 }
