--- a/vercel-back.json
+++ b/vercel-back.json
@@ -18,12 +18,8 @@
   ],
   "routes": [
     {
-      "src": "/aaa/(.*)",
-      "dest": "/static/templates/statics/$1"
-    },
-    {
-      "src": "/baidu_verify_codeva-irCSP8JvXx.html",
-      "dest": "/static/templates/statics/baidu_verify_codeva-irCSP8JvXx.html"
+      "src": "/(.*)",
+      "dest": "/api/client"
     }
   ]
 }
