--- a/vercel.json
+++ b/vercel.json
@@ -10,9 +10,9 @@
     },
     {
       "use": "@vercel/static",
-      "src": "templates/statics/**",
+      "src": "statics/**",
       "config": {
-        "distDir": "public"
+        "zeroConfig": true
       }
     }
   ],
