优化标题和关键词

--- a/application.json
+++ b/application.json
@@ -28,11 +28,11 @@
   },
   "maccms": {
     "site": {
-      "site_name": "电影先生 - dyxs.site 在线 播放 观看",
+      "site_name": "电影先生",
       "site_url": "dyxs.site",
       "site_wapurl": "dyxs.site",
-      "site_keywords": "电影先生,在线播放,在线观看,百度网盘,免费视频,在线视频,预告片,dyxs.site",
-      "site_description": "电影先生提供最新最快的视频分享数据-dyxs.site",
+      "site_keywords": "电影先生,最新电影,电影大全,影视大全,在线电影,免费电影,电影在线观看,最新电视剧,电影先生,在线播放,百度网盘,免费视频,在线视频,预告片,dyxs.site",
+      "site_description": "电影先生提供最新最快的视频分享数据-聚合全网影片，你想看的全都有！每天搜集互联网最新电影和电视剧，为广大用户免费提供无广告在线观看电影和电视剧服务，及时收录最新、最热、最全的电影大片,高清正版免费看。dyxs.site",
       "site_icp": "",
       "site_qq": "",
       "site_email": "mail@dyxs.site",
