--- a/vercel.json
+++ b/vercel.json
@@ -9,6 +9,13 @@
       }
     },
     {
+      "use": "@vercel/go",
+      "src": "api/cron.go",
+      "config": {
+        "zeroConfig": true
+      }
+    },
+    {
       "use": "@vercel/static",
       "src": "statics/**",
       "config": {
